css/home.css
html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: 'Caudex';
  color: #EADCD2;
  background-color: #212026;
  text-align: justify;
}

sc {
  font-family: 'Vollkorn SC';
}
.catbusfooter {
  position: absolute;
  left: 10px;
  bottom: 10px;
  color: #2c2b31;
}

.catbusfooter a:link {
  color: #575561;
  text-decoration: none;
}

.catbusfooter a:hover {
  color: #EADCD2;
  text-decoration: none;
}

.catbusfooter a:visited {
  color: #575561;
  text-decoration: none;
}

a:link {
  color: #EADCD2;
  text-decoration: none;
}

a:visited {
  color: #b6aaa0;
  text-decoration: none;
}

a:hover { 
  color: #fff;
  text-decoration: none;
}

footer {
  height: 50px;
  background-color: #141316;
  position: fixed;
  width: 100%;
  bottom: 0px;
  left: 0px;
}

.busStop { 
  position: absolute;
  right: 0px; 
  bottom: 45px; 
  width: 35%;
  max-width: 800px;
}
.eyes { 
  position: absolute;
  bottom: 40px; 
  right: 0px; 
  left: 0px; 
  width: 25%;
  max-width: 600px;
}
.light { 
  position: absolute;
  bottom: 40px; 
  opacity: 0;
  z-index: -1;
  left: 0px; 
  width: 25%;
  max-width: 500px;
}
.homebox:hover .light {
  opacity: 20%;
}

.hakyll {
  position: absolute;
  right: 10px;
  bottom: 10px;
  color: #2c2b31;
}

.hakyll a:link {
  color: #575561;
  text-decoration: none;
}

.hakyll a:hover {
  color: #EADCD2;
  text-decoration: none;
}

.hakyll a:visited {
  color: #575561;
  text-decoration: none;
}


h1 {
  font-size: 2.4rem;
}

h2 {
  font-size: 2rem;
}

.title {
  text-align: center;
  font-family: 'Vollkorn SC';
  font-size: 8rem;
  float: left;
  margin-right: 10pt;
  margin-bottom: -10pt;
  margin-top: -1.5rem;
}

.lastmodified {
  font-size: 1.5rem;
  font-family: 'Vollkorn';
  font-style: italic;
  text-align: left;
  margin-top: -10pt;
  color: #eadcd23d;
}

@media (max-width: 600pt) {
  body {
    width: 90%;
    margin: 0;
    padding: 0 5%;
  }
}

@media (min-width: 601pt) {
  body {
    width: 60rem;
    margin: 0 auto;
    padding: 0;
  }
}

@media (max-height: 350pt) {
  footer {
    position: relative;
    width: 111.11%;
    top: 150px;
    left: -5.55%;
  }
  .busStop { 
    bottom: 45px; 
  }
  .eyes { 
    bottom: 50px; 
  }
  .light { 
    left: 0px; 
    bottom: 50px; 
  }
}

